<resources>
    <string name="app_name">Vigiphone3</string>
    <string name="log_error">Error :</string>
    <string name="error_fetching_data">Error while fetching data from the server</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="recording_step">Recording step</string>
    <string name="current_recording_step">Current sampling step :</string>
    <string name="change_the_recording_step">Change the sampling step</string>
    <string name="recording_time">Recording Time</string>
    <string name="undefined">undefined</string>
    <string name="limited">Defined</string>
    <string name="current_recording_duration">Current recording duration :</string>
    <string name="change_the_recording_duration">Change the recording duration</string>
    <string name="transfer_threshold">Transfer Threshold</string>
    <string name="current_threshold">Current transfer threshold :</string>
    <string name="database_size">Database size :</string>
    <string name="change_the_transfer_threshold">Change the transfer threshold</string>
    <string name="save_destination">Save Destination</string>
    <string name="file">File</string>
    <string name="server">Server</string>
    <string name="filename">filename</string>
    <string name="start">Start</string>
    <string name="emitter">Emitter</string>
    <string name="cid_lac">CID - LAC</string>
    <string name="mcc_mnc">MCC - MNC</string>
    <string name="operator">Operator</string>
    <string name="network_type">Network Type</string>
    <string name="signal_strengh_dbm">Signal Strengh (dBm)</string>
    <string name="neighbours_2g">Neighbours (2G)</string>
    <string name="position">Position</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="sensors">Sensors</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="light">Light</string>
    <string name="proximity">Proximity</string>
    <string name="start_recording">Start recording</string>
    <string name="watch_the_sensors">Watch the sensors</string>
    <string name="map_of_emitters">Map of emitters</string>
    <string name="camera_mode">Camera mode</string>
    <string name="other">Other</string>
    <string name="fetching">fetching…</string>
    <string name="permissions_needed_title">Permissions Needed</string>
    <string name="permissions_needed_text">Vigiphone3 needs some permissions in order to save and send data, please allow them if you want the app to work as intended !</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="permissions_permanently_denied">Permissions Permanently Denied</string>
    <string name="permissions_denied_text">You denied some permissions that are needed for the app to run. Please reconsider allowing them via the settings</string>
    <string name="permissions_permanently_denied_text">You permanently denied some permissions that are needed for the app to run. Please reconsider allowing them via the settings</string>
    <string name="settings_button_text">Settings</string>
    <string name="recording_fragment_title">Recording</string>
    <string name="sensors_fragment_title">Sensors</string>
    <string name="map_fragment_title">Map</string>
    <string name="uncalibrate">Uncalibrate</string>
    <string name="calibrate">Calibrate</string>
    <string name="please_wait_title">Please wait</string>
    <string name="calibration_ongoing">The calibration is being done, don\'t move your phone</string>
    <string name="orientation">Orientation</string>
    <string name="choose_file_name">Choose file name</string>
    <string name="file_name">File name :</string>
    <string name="recording_duration">Recording duration :</string>
    <string name="has_been_recording_for">Has been recording for :</string>
    <string name="recording_summary">Recording Summary</string>
    <string name="ends_after">Ends after :</string>
    <string name="stop_recording">Stop recording</string>
    <string name="duration_smaller_step">Recording  duration is inferior to recording step</string>
    <string name="time_null">Time is null</string>
    <string name="revert_default_times">Recording duration is smaller than recording step, reverted to default values.</string>
    <string name="button_click">Manual stop</string>
    <string name="record_and_transfer">Recording and transfer ongoing…</string>
    <string name="transfer">Transfer ongoing…</string>
    <string name="recording">Recording ongoing…</string>
    <string name="choose_threshold">Choose a transfer threshold</string>
    <string name="settings">Settings</string>
    <string name="vigiphone_3">Vigiphone 3</string>
    <string name="appicon">appicon</string>
    <string name="accessToken" translatable="false">pk.eyJ1IjoiYmVuamlzb3JhIiwiYSI6ImNpcGpnNXFxZTAwNTN1eG5xcXA5amsyMTEifQ.5OXpyN3V5vahIKLLJkbAIA</string>
</resources>
