<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_settings_input_antenna_black_24dp"
            android:title="@string/start_recording" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_vibration_black_24dp"
            android:title="@string/watch_the_sensors" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map_of_emitters" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/camera_mode" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings" />
        </menu>

    </item>

</menu>
